[package]
name = "near-indexer"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.48"
tokio = "1.47.1"
tracing = "0.1.41"
# actix-rt = "2.11.0"
# # actix-web = "4.11.0"
actix = "0.13.5"
openssl-probe = "0.1.6"

near-indexer = { git = "https://github.com/near/nearcore", tag = "2.8.0" }
near-indexer-primitives = { git = "https://github.com/near/nearcore", tag = "2.8.0" }
near-config-utils = { git = "https://github.com/near/nearcore", tag = "2.8.0" }
near-o11y = { git = "https://github.com/near/nearcore", tag = "2.8.0" }
